Corrigindo caminhos relativos para GitHub Pages

--- a/countdown-screen.html
+++ b/countdown-screen.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Beat Runner – Countdown</title>
+  <title>Beat Runner</title>
 
   <!-- generic globals -->
   <!-- night-sky background positioning -->
-  <link rel="stylesheet" href="../css/background.css" />
+  <link rel="stylesheet" href="./background.css" />
   <!-- shared screen layout & fade -->
-  <link rel="stylesheet" href="../css/screen-style.css" />
+  <link rel="stylesheet" href="./screen-style.css" />
   <!-- countdown-specific styles -->
-  <link rel="stylesheet" href="../css/countdown-style.css" />
+  <link rel="stylesheet" href="./countdown-style.css" />
 </head>
 <body class="overlay">
   <!-- animated Night Sky background -->
@@ -25,6 +25,6 @@
   </div>
 
   <!-- kicks off both background & countdown logic -->
-  <script type="module" src="../js/countdown-screen.js" defer></script>
+  <script type="module" src="./countdown-screen.js" defer></script>
 </body>
 </html>
