--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Beat Runner</title>
-  <link rel="stylesheet" href="/css/welcome-style.css" />
+  <link rel="stylesheet" href="./welcome-style.css" />
 </head>
 <body>
   <div id="welcome-container" class="fade-container">
@@ -20,6 +20,6 @@
       <p>Divirta-se!</p>
     </div>
   </div>
-  <script src="/js/disclaimer.js"></script>
+  <script src="./disclaimer.js"></script>
 </body>
 </html>
