--- a/game-screen.html
+++ b/game-screen.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beat Runner</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <script type="module" src="../js/game-song.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
+    <script type="module" src="./game-song.js" defer></script>
 </head>
 <body>
 <canvas id="gameCanvas"></canvas>
