--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <meta http-equiv="refresh" content="0; url=welcome-screen.html" />
 </head>
 <body>
-  <p>Redirecionando para <a href="welcome-screen.html">Beat Runner Game</a>…</p>
+  <p>Redirecionando para <a href="./welcome-screen.html">Beat Runner Game</a>…</p>
 </body>
 </html>
