--- a/main-menu-screen.html
+++ b/main-menu-screen.html
@@ -7,7 +7,7 @@
   <title>Beat Runner</title>
 
   <!-- screen‐specific styles -->
-<link rel="stylesheet" href="../css/screen-style.css" />
+<link rel="stylesheet" href="./screen-style.css" />
 
 </head>
 <body class="overlay">
@@ -114,6 +114,6 @@
   </div>
 
   <!-- UI logic (background, audio, navigation) -->
-  <script type="module" src="../js/main-menu-ui.js" defer></script>
+  <script type="module" src="./main-menu-ui.js" defer></script>
 </body>
 </html>
