--- a/welcome-screen.html
+++ b/welcome-screen.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Beat Runner</title>
-  <link rel="stylesheet" href="/css/welcome-style.css" />
+  <link rel="stylesheet" href="./welcome-style.css" />
 </head>
 <body>
   <div id="welcome-container" class="fade-container">
@@ -16,6 +16,6 @@
       </div>
     <div class="footer">© 2025 Beat Runner. Todos os direitos reservados.</div>
   </div>
-  <script src="/js/welcome-screen.js"></script>
+  <script src="./welcome-screen.js"></script>
 </body>
 </html>
