Correções de cor do background

--- a/game-screen.html
+++ b/game-screen.html
@@ -29,7 +29,7 @@
 <!--Game Over Menu-->
     <div id="gameOverMenu">
         <div id="gameOverTitle">
-        <h1>BEAT</br>OVER</h1>
+        <h1>GAME OVER</h1>
         </div>
         <div id="gameStats">
             <p><span>»</span> PONTUAÇÃO: <span id="statScore"></span></p>
