Correção de fontes remotas em index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Jersey+10&family=Silkscreen:wght@400;700&family=Yarndings+12&display=swap" rel="stylesheet">
   <meta http-equiv="refresh" content="0; url=welcome-screen.html" />
 </head>
 <body>
