--- a/countdown-screen.html
+++ b/countdown-screen.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Beat Runner</title>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Jersey+10&family=Silkscreen:wght@400;700&family=Yarndings+12&display=swap" rel="stylesheet">
   <!-- generic globals -->
   <!-- night-sky background positioning -->
   <link rel="stylesheet" href="./background.css" />
