--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Beat Runner</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Jersey+10&family=Silkscreen:wght@400;700&family=Yarndings+12&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./welcome-style.css" />
 </head>
 <body>
